# movies

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/movies/: __init__.py  __main__.py  cli.py  database.py  movie.py  writer.py
