[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movies"
version = "1.0"
description = "Build your own movie database"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Maxime Poli" }]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "notion-client>=2.3.0",
    "requests>=2.32.3",
]

[project.scripts]
movies = "movies.__main__:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]
